<resources>
    <string name="app_name">Passwordz</string>
    <string name="login">Login</string>
    <string name="text_password">Password</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="notes">Notes</string>
    <string name="website_icon">Website icon</string>
    <string name="www_google_com">www.google.com</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="about">About</string>
    <string name="get_started">Get Started</string>
    <string name="no_accounts_message">No logins added!</string>
    <string name="no_logins_found">No logins added</string>
    <string name="no_cards_found">No cards added</string>
    <string name="sample_username">zahidquraishi41@gmail.com</string>
    <string name="copy_username">Copy username</string>
    <string name="copy_password">Copy password</string>
    <string name="username">Username</string>
    <string name="website">Website</string>
    <string name="save">Save</string>
    <string name="logins">Logins</string>
    <string name="add_logins">Add Logins</string>
    <string name="delete">Delete</string>
    <string name="sample_last_modified">08/22/2021</string>
    <string name="delete_confirmation_title">Are you ABSOLUTELY sure?</string>
    <string name="delete_confirmation_text">This action CANNOT be undone. This will permanently delete the USERNAME account under WEBSITE. \nPlease type in the username to confirm.</string>
    <string name="card_delete">This action CANNOT be undone. This will permanently delete the CARD_TYPE numbered CARD_NUMBER. \nPlease type in the username to confirm.</string>
    <string name="confirm_delete_all_logins">This action CANNOT be undone. This will permanently delete the login accounts. \nPlease type in I UNDERSTAND to confirm.</string>
    <string name="confirm_delete_all_cards">This action CANNOT be undone. This will permanently delete all saved credit/debit cards. \nPlease type I UNDERSTAND username to confirm.</string>
    <string name="add_account">Add Account</string>
    <string name="add_login">Add Login</string>
    <string name="edit_login">Edit Login</string>
    <string name="card_number">Card Number</string>
    <string name="name_on_card">Name on Card</string>
    <string name="valid_through">Valid Through</string>
    <string name="add_card">Add Card</string>
    <string name="card_type">Card Type</string>
    <string name="settings">Settings</string>
    <string name="select_profile_picture">Select Profile Picture</string>
    <string name="night_mode">Night Mode</string>
    <string name="logout">Logout</string>
    <string name="display_shake_prompt">Display Shake Prompt</string>
    <string name="cards">Cards</string>
    <string name="cvv">CVV</string>
    <string name="cardholder_name">CARDHOLDER NAME</string>
    <string name="valid_thru">VALID THRU</string>
    <string name="remove_all_logins">Remove all logins</string>
    <string name="remove_all_cards">Remove all cards</string>
    <string name="export_cards">Backup Cards</string>
    <string name="import_cards">Restore Cards</string>
    <string name="export_logins">Backup Logins</string>
    <string name="import_logins">Restore Logins</string>
    <string name="app_icon">App Icon</string>
    <string name="version">Version\n1.0</string>
    <string name="delete_account">Delete Account</string>
    <string name="enable_fingerprint">Enable Fingerprint</string>
    <string name="user_settings">User Settings</string>
    <string name="backup_amp_restore"><![CDATA[Backup & Restore]]></string>
    <string name="others">Others</string>
</resources>