<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivProfilePic"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:srcCompat="@drawable/ic_cat" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_toEndOf="@+id/ivProfilePic"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvFullName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/full_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                </androidx.appcompat.widget.LinearLayoutCompat>


            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/smNightMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:padding="16dp"
                    android:text="@string/night_mode"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/smShowShakePrompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:padding="16dp"
                    android:text="@string/display_shake_prompt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            </androidx.appcompat.widget.LinearLayoutCompat>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvExportLogins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="8dp"
                    android:padding="16dp"
                    android:text="@string/export_logins"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvExportCards"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:drawableStart="@drawable/ic_credit_card"
                    android:drawablePadding="8dp"
                    android:padding="16dp"
                    android:text="@string/export_cards"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvImportLogins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="8dp"
                    android:padding="16dp"
                    android:text="@string/import_logins"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvImportCards"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:drawableStart="@drawable/ic_credit_card"
                    android:drawablePadding="8dp"
                    android:padding="16dp"
                    android:text="@string/import_cards"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvRemoveAllLogins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:drawableStart="@drawable/ic_delete"
                    android:drawablePadding="8dp"
                    android:padding="16dp"
                    android:text="@string/remove_all_logins"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvRemoveAllCards"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:drawableStart="@drawable/ic_delete"
                    android:drawablePadding="8dp"
                    android:padding="16dp"
                    android:text="@string/remove_all_cards"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            </androidx.appcompat.widget.LinearLayoutCompat>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:drawableStart="@drawable/ic_info"
                    android:drawablePadding="8dp"
                    android:padding="16dp"
                    android:text="@string/about"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvLogout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:drawableStart="@drawable/ic_logout"
                    android:drawablePadding="8dp"
                    android:padding="16dp"
                    android:text="@string/logout"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.card.MaterialCardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>